# AqUaVisionTeamA

tvmc/: CMakeLists.txt  LICENSE  README.md  package.xml
tvmc-msg/: CMakeLists.txt  README.md  package.xml  req_py_packages.txt  setup.py
tvmc-msg/msg/: Command.msg  ControlMode.msg  CurrentPoint.msg  DoF.msg  LEDControl.msg  PidConstants.msg  PidLimits.msg  TargetPoint.msg  Thrust.msg
tvmc-msg/scripts/: thrustvec_reference.txt
tvmc-msg/scripts/SAUVC '25/: PID_CONSTANTS.py  QualificationTask.py  cam_color_mask.py  depthcam.py  finalTask.py  finalTask_v2.py  flare_avoidance.py  man2.py  manual_yaw_qual_hard.py  mask_configurer.py  moveit.py  oakd_test.py  pid_yaw_qual_hard.py  pub.py  pub_viz.py  sub_viz.py  task1_navigation.py  taskit.py
tvmc-msg/scripts/aquavis26/: gate_task.py  task1.py  vision_publisher.py
tvmc-msg/scripts/others/: beacon_driver.py  interface.py  motion.py  motion2.py  semi.py  straight.py  thruster-test.py
tvmc-msg/src/tvmc/: __init__.py  enums.py  motion_controller.py
tvmc/config/: Old_constants.txt  config.json  t100.csv  t200.csv
tvmc/msg/: axes.msg  controller.msg  motion_command_msg.msg  pwm_values_msg.msg  sensor_data_msg.msg
tvmc/scripts/: heave_tuner.py
tvmc/src/: CMakeLists.txt
tvmc/src/PID-Controller/: CMakeLists.txt  PID_controller.cpp  PID_controller.h  README.md
tvmc/src/motion-controller/: controller.cpp  controller.h
tvmc/src/reporters/: pwm.cpp  pwm.h  thrust.cpp  thrust.h
tvmc/src/thruster-config/: thruster_config.cpp  thruster_config.h
